--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,9 +4,9 @@
 @import "config/reset";
 // @import "mixins/mixin";
 // @import "mixins/vendor_prefix";
-// @import "modules/side_bar";
+@import "modules/side_bar";
 // @import "modules/chat";
 @import "modules/user";
 @import "modules/group";
 @import "modules/flash";
-@import "messages/messages.scss"
+@import "messages/messages"
