--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,84 +2,24 @@
 
   .left-contents
     = render 'shared/side_bar'
-    -# .user
-    -#   .user__box
-    -#     .user__box__name
-    -#       = current_user.name
-    -#     .user__box__menu
-    -#       =link_to "groups/new", class: "user__box__menu__icon" do
-    -#         = fa_icon 'edit'
-    -#         %span<>
-    -#       =link_to "users/edit", class: "user__box__menu__icon" do
-    -#         = fa_icon 'cog'
-    -#         %span<>
-
-    -# .list
-    -#   .list__group
-    -#     .list__title
-    -#       グループ名　その１
-    -#     .list__message
-    -#       メッセージ　その１
-    -#   .list__group
-    -#     .list__title
-    -#       グループ名　その２２２２２
-    -#     .list__message
-    -#       メッセージ　その２２２２２
-
   .right-contents
     .top
       .top-left
         .top-left__title
           グループ名
         .top-left__member
-          Member：メンバー名
+          Member：
       .top-right
         .top-right__edit
         =link_to "edit",class: "top-right__btn" do
           Edit
-
-    .chat
-      .chat__message
-        .chat__message--member
-          メンバー名１
-        .chat__message--date
-          2020/20/20(Mon) 20:20:20
-        .chat__message--message
-          メッセージ１
-        .chat__message--member
-          メンバー名２
-        .chat__message--date
-          2020/20/20(Mon) 20:20:20
-        .chat__message--message
-          メッセージ２
-        .chat__message--member
-          メンバー名　上限これくらい
-        .chat__message--date
-          2020/20/20(Mon) 20:20:20
-        .chat__message--message
-          メッセージ３３３３３３３３３３３３３３３３３３３３
-        .chat__message--message
-          メッセージ３３３３３３３３３３３３３３３３３３３３
-        .chat__message--message
-          メッセージ３３３３３３３３３３３３３３３３３３３３
-        .chat__message--message
-          メッセージ３３３３３３３３３３３３３３３３３３３３
-        .chat__message--message
-          メッセージ３３３３３３３３３３３３３３３３３３３３
-        .chat__message--message
-          メッセージ３３３３３３３３３３３３３３３３３３３３
-        .chat__message--message
-          メッセージ３３３３３３３３３３３３３３３３３３３３
-
+    .messages
+      = render @messages
     .form
-      .main
-        .main__message
-          .main__message--text
-            = form_for("@##""@#") do |f|
-              %input.main__message--text{id: "message_content", name: "messages[content]", placeholder: " type a message", type: "text"}
-                .main__message--image
-                  %label.input-box__image{for: "message_image"}
-                    = fa_icon 'image'
-                    %input.input-box__image__file{id: "message_image", name: "message[image]", type: "file"}
-          .main__btn
-            %input.button{type: "submit", value: "Send"}
+      .box
+        = form_for [@group, @message] do |f|
+          = f.text_field :content, class: 'box__message', placeholder: 'type a message'
+          = f.label :image, class: 'box__image' do
+            = fa_icon 'picture-o', class: 'icon'
+            = f.file_field :image, class: 'hidden'
+          = f.submit 'Send', class: 'form__submit'
