--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,7 +6,7 @@
     .top
       .top-left
         .top-left__title
-          グループ名
+          =@group.name
         .top-left__member
           Member：
       .top-right
