Add some descriptions
messages/index.html.hamlにて
グループメンバーが表示される記述を追加

javascripts/index.jsにて
テキストフィールドに入力される度に発火されるイベントを追加

非同期で通信した結果を表示するHTMLに記述を追加

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -9,6 +9,8 @@
           =@group.name
         .top-left__member
           Member：
+          - @group.users.each do |user|
+            = user.name
       .top-right
         .top-right__edit
         =link_to "edit",class: "top-right__btn" do
