--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -7,7 +7,7 @@
           %li= message
   .chat-group-form__field
     .chat-group-form__field--left
-      = f.label :name, class: 'chat-group-form__label'
+      = f.label :name,"グループ名", class: 'chat-group-form__label'
     .chat-group-form__field--right
       = f.text_field :name, class: 'chat__group_name chat-group-form__input', placeholder: 'グループ名を入力してください'
 
@@ -17,7 +17,15 @@
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
         %input#user-search-field.chat-group-form__input{:placeholder => "追加したいユーザー名を入力してください", :type => "text"}/
-        #user-search-result
+      #user-search-result
+  .chat-group-form__field.clearfix
+    .chat-group-form__field--left
+      = f.label :name,"チャットメンバー",class: "chat-group-form__label"
+    .chat-group-form__field--right
+      #chat-group-user-add
+      .chat-group-user.clearfix
+        %p.chat-group-user__name
+          = current_user.name
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
