--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -22,13 +22,18 @@
     .chat-group-form__field--left
       = f.label :name,"チャットメンバー",class: "chat-group-form__label"
     .chat-group-form__field--right
+      .chat-group-user.clearfix
+        %input{name: "group[user_ids][]", type: "hidden", value: current_user.id}
+        %p.chat-group-user__name
+          = current_user.name
       #chat-group-user-add
         - @group.users.each do |user|
-          .chat-group-user.clearfix
-            %input{:name => "group[user_ids][]", :type => "hidden", :value => "#{ user.id }"}/
-            %p.chat-group-user__name
-              = user.name
-            %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
+          - if user != current_user
+            .chat-group-user.clearfix
+              %input{name: "group[user_ids][]", type: "hidden", value: user.id}/
+              %p.chat-group-user__name
+                = user.name
+              %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
