--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,5 +1,5 @@
-.message
-  .message__upper-message
+.message{"data-id" => "message.id"}
+  .message__upper-message{"data-id" => "message.id"}
     .message__upper-message__user-name
       = message.user.name
     .message__upper-message__date
