追加：自動更新機能の追加
自動更新機能を追加しました

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,7 +5,7 @@
   .right-contents
     .top
       .top-left
-        .top-left__title
+        .top-left__title{"data-group_id": "#{@group.id}"}
           =@group.name
         .top-left__member
           Member：
