追加：ターボリンクスの記述を追加
リンク先で自動更新されないように
falseの記述を併せて追加

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -13,7 +13,7 @@
             = user.name
       .top-right
         .top-right__edit
-        =link_to "edit",class: "top-right__btn" do
+        =link_to "edit",class: "top-right__btn", data: {"turbolinks" => false} do
           Edit
     .messages
       = render @messages
