--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -5,15 +5,15 @@
         = current_user.name
       %ul.header__box__menu
         %li.list
-          = link_to new_group_path do
+          = link_to new_group_path, data: {"turbolinks" => false} do
             = fa_icon 'pencil-square-o', class: 'icon'
         %li.list
-          = link_to edit_user_path(current_user) do
+          = link_to edit_user_path(current_user), data: {"turbolinks" => false} do
             = fa_icon 'cog', class: 'icon'
   .groups
     .groups__group
       - current_user.groups.each do |group|
-        = link_to group_messages_path(group) do
+        = link_to group_messages_path(group), data: {"turbolinks" => false} do
           .groups__group__name
             = group.name
           .groups__group__message
