--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,7 +3,7 @@
     .message__upper-message__user-name
       = message.user.name
     .message__upper-message__date
-      = message.created_at.strftime("%Y/%m/%d %H:%M")
+      = message.created_at.strftime('%Y年%m月%d日 %H:%M:%S')
   .message__lower-message
     - if message.content.present?
       %p.message__lower-message__content
