修正：閉じタグ修正
足りなかったのを修正

--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -13,7 +13,7 @@
   .groups
     .groups__group
       - current_user.groups.each do |group|
-        = link_to group_messages_path(group), data: {"turbolinks" => false} do
+        = link_to group_messages_path(group) do
           .groups__group__name
             = group.name
           .groups__group__message
