修正：タイムゾーン、二重サブミット
自動更新時の日時表記を修正
自動更新でも日本時間で表示されるよう修正しました。

二重サブミット対策の記述を追加しました。

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -19,7 +19,7 @@
       = render @messages
     .form
       .box
-        = form_for([@group, @message],html:{class: 'inner_form'}) do |f|
+        = form_for [@group, @message] do |f|
           = f.text_field :content, class: 'box__message', placeholder: 'type a message'
           = f.label :image, class: 'box__image' do
             = fa_icon 'picture-o', class: 'icon'
